# a0-code-exec-mcp

./: .gitignore  CLAUDE.md  IMPLEMENTATION_NOTES.md  LICENSE  QUICKSTART.md  README.md  code_execution_tool.py  main.py  mcp-config-example.json  pyproject.toml  verify_package.py
helpers/: log.py  shell_utils.py  strings.py
scripts/: initialize_terminal.sh
src/ao_code_exec_mcp/: __init__.py  log.py  print_style.py  server.py  shell_local.py  shell_manager.py  strings.py  tools.py  tty_session.py
src/ao_code_exec_mcp/prompts/: system.md  tool_response.md
